# torun-bo-mapa

./: .gitattributes  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: test.yml
bo/: 2024.json  2024.raw.json  2025.json  2025.raw.json
bo/2025/: curl.sh
data/: 2024.json  2025.json  2025.raw.json  2026.json  2026.raw.json
data/2023/: curl.sh
data/2024/: curl.sh
data/2026/: curl.sh
preprocessing/: extract_bo_2024.py  extract_bo_2025.py  extract_bo_2026.py  extract_budzet_obywatelski_2024.py  extract_budzet_obywatelski_2025.py  find_failed_geocoding.py  perform_geolocation.py  tools.py
