[project]
name = "torun-budzet-wizualizacja"
version = "0.1.0"
description = "Visualization of the budget of the city of Toruń, Poland"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber",
    "pl-core-news-sm",
    "spacy",
]

[tool.uv.sources]
pl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.8.0/pl_core_news_sm-3.8.0-py3-none-any.whl" }
